--- a/02/2_style.css
+++ b/02/2_style.css
@@ -8,10 +8,12 @@ body {
 
 .container {
     display: flex;
-    justify-content: space-between;
+
+    flex-direction: column;
+
+    justify-content: center;
     width: 80%;
-    margin: auto;
-    text-align: center;
+    margin: 50%;
 }
 
 .box {
