--- a/01/1_style.css
+++ b/01/1_style.css
@@ -8,9 +8,9 @@ body {
 
 .container {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     width: 80%;
-    margin: auto;
+    gap: 50%;
 }
 
 .box {
