--- a/03/3_style.css
+++ b/03/3_style.css
@@ -8,13 +8,17 @@ body {
 
 .container {
     display: flex;
+
+    flex-wrap: wrap;
+
     justify-content: center;
     width: 80%;
     gap: 50%;
+
 }
 
 .box {
-    width: 100px;
+    width: 400px;
     background-color: chartreuse;
     border-radius: 5px;
 }  
