--- a/03/3_style.css
+++ b/03/3_style.css
@@ -4,6 +4,7 @@ body {
     font-family: Arial, sans-serif;
     background-color: #f1f1f1 ;
     display: flex;
+    justify-content: center;
 }
 
 .container {
