--- a/03/3_style.css
+++ b/03/3_style.css
@@ -5,10 +5,12 @@ body {
     background-color: #f1f1f1 ;
     display: flex;
     justify-content: center;
+    width: 80%;
 }
 
 .container {
     display: flex;
+    flex-direction: row-reverse;
 
     flex-wrap: wrap;
 
